[project]
name = "databricks_dp_01"
version = "0.0.1"
authors = [{ name = "me@dartanghan.com.br" }]
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "databricks-dlt",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_dp_01"]

[project.scripts]
main = "databricks_dp_01.main:main"
